add Andrews 1st notebook

--- a/Project_One.ipynb
+++ b/Project_One.ipynb
@@ -22,7 +22,8 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "import time\n",
     "from bs4 import BeautifulSoup\n",
-    "import requests "
+    "import requests \n",
+    "import seaborn as sns"
    ]
   },
   {
@@ -1021,22 +1022,18 @@
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'ratings_valid' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-ce4c01eda78a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     13\u001b[0m         \u001b[0moutlist\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0min_out\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0moutlist\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'known_ratings'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'know_for_title'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mget_ratings_1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/opt/anaconda3/envs/learn-env/lib/python3.8/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36mapply\u001b[0;34m(self, func, convert_dtype, args, **kwds)\u001b[0m\n\u001b[1;32m   4198\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4199\u001b[0m                 \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4200\u001b[0;31m                 \u001b[0mmapped\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap_infer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconvert_dtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4201\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4202\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSeries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32mpandas/_libs/lib.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.map_infer\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-23-ce4c01eda78a>\u001b[0m in \u001b[0;36mget_ratings_1\u001b[0;34m(in_list)\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNaN\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0min_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mratings_valid\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m             \u001b[0min_out\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mratings_valid\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'averagerating'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m;\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m             \u001b[0mhas_movie\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'ratings_valid' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "title_ratings = pd.read_csv('data/zippedData/imdb.title.ratings.csv.gz',compression = 'gzip');\n",
+    "title_ratings = title_ratings.set_index('tconst');\n",
+    "ratings_valid = title_ratings.index.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "#get known ratingd for each known for title\n",
     "def get_ratings_1(in_list):\n",
@@ -1046,7 +1043,7 @@
     "        return np.NaN\n",
     "    for i in in_list:\n",
     "        if i in ratings_valid:\n",
-    "            in_out = ratings_vaid['averagerating'][i];\n",
+    "            in_out = title_ratings['averagerating'][i];\n",
     "            has_movie = True\n",
     "        else:\n",
     "            in_out = i;\n",
@@ -1057,139 +1054,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.loc[df['known_ratings']==0,'known_ratings']=np.NaN\n",
+    "df = df.dropna(subset = ['known_ratings'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tconst</th>\n",
-       "      <th>original_title</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>primary_title</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Sunghursh</th>\n",
-       "      <td>tt0063540</td>\n",
-       "      <td>Sunghursh</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>One Day Before the Rainy Season</th>\n",
-       "      <td>tt0066787</td>\n",
-       "      <td>Ashad Ka Ek Din</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>The Other Side of the Wind</th>\n",
-       "      <td>tt0069049</td>\n",
-       "      <td>The Other Side of the Wind</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sabse Bada Sukh</th>\n",
-       "      <td>tt0069204</td>\n",
-       "      <td>Sabse Bada Sukh</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>The Wandering Soap Opera</th>\n",
-       "      <td>tt0100275</td>\n",
-       "      <td>La Telenovela Errante</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Kuambil Lagi Hatiku</th>\n",
-       "      <td>tt9916538</td>\n",
-       "      <td>Kuambil Lagi Hatiku</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Rodolpho Teóphilo - O Legado de um Pioneiro</th>\n",
-       "      <td>tt9916622</td>\n",
-       "      <td>Rodolpho Teóphilo - O Legado de um Pioneiro</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Dankyavar Danka</th>\n",
-       "      <td>tt9916706</td>\n",
-       "      <td>Dankyavar Danka</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6 Gunn</th>\n",
-       "      <td>tt9916730</td>\n",
-       "      <td>6 Gunn</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Chico Albuquerque - Revelações</th>\n",
-       "      <td>tt9916754</td>\n",
-       "      <td>Chico Albuquerque - Revelações</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>146144 rows × 2 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                                tconst  \\\n",
-       "primary_title                                            \n",
-       "Sunghursh                                    tt0063540   \n",
-       "One Day Before the Rainy Season              tt0066787   \n",
-       "The Other Side of the Wind                   tt0069049   \n",
-       "Sabse Bada Sukh                              tt0069204   \n",
-       "The Wandering Soap Opera                     tt0100275   \n",
-       "...                                                ...   \n",
-       "Kuambil Lagi Hatiku                          tt9916538   \n",
-       "Rodolpho Teóphilo - O Legado de um Pioneiro  tt9916622   \n",
-       "Dankyavar Danka                              tt9916706   \n",
-       "6 Gunn                                       tt9916730   \n",
-       "Chico Albuquerque - Revelações               tt9916754   \n",
-       "\n",
-       "                                                                          original_title  \n",
-       "primary_title                                                                             \n",
-       "Sunghursh                                                                      Sunghursh  \n",
-       "One Day Before the Rainy Season                                          Ashad Ka Ek Din  \n",
-       "The Other Side of the Wind                                    The Other Side of the Wind  \n",
-       "Sabse Bada Sukh                                                          Sabse Bada Sukh  \n",
-       "The Wandering Soap Opera                                           La Telenovela Errante  \n",
-       "...                                                                                  ...  \n",
-       "Kuambil Lagi Hatiku                                                  Kuambil Lagi Hatiku  \n",
-       "Rodolpho Teóphilo - O Legado de um Pioneiro  Rodolpho Teóphilo - O Legado de um Pioneiro  \n",
-       "Dankyavar Danka                                                          Dankyavar Danka  \n",
-       "6 Gunn                                                                            6 Gunn  \n",
-       "Chico Albuquerque - Revelações                            Chico Albuquerque - Revelações  \n",
-       "\n",
-       "[146144 rows x 2 columns]"
+       "\"#for unknown ratings, scrape the data from impb\\ndef scrape_rate(id_list):\\n    out = []\\n    try:\\n        for i in id_list:\\n            if i[0:2] == 'tt':\\n                url = f'https://www.imdb.com/title/{i}/'\\n                response = requests.get(url);\\n                soup = BeautifulSoup(response.text, 'lxml')\\n                title = soup.find('span', class_='AggregateRatingButton__RatingScore-sc-1il8omz-1 fhMjqK');\\n                        #title = soup.find('h1',class_='TitleHeader__TitleText-sc-1wu6n3d-0 gxLYZW');\\n                out.append(title.text)\\n                time.sleep(0.5)\\n            else:\\n                out.append(i);\\n        return out\\n    except:\\n        return np.NaN\\ndf['known_ratings'] = df['known_ratings'].apply(scrape_rate) \\n\""
       ]
      },
-     "execution_count": 24,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "title_basics\n"
+    "'''#for unknown ratings, scrape the data from impb\n",
+    "def scrape_rate(id_list):\n",
+    "    out = []\n",
+    "    try:\n",
+    "        for i in id_list:\n",
+    "            if i[0:2] == 'tt':\n",
+    "                url = f'https://www.imdb.com/title/{i}/'\n",
+    "                response = requests.get(url);\n",
+    "                soup = BeautifulSoup(response.text, 'lxml')\n",
+    "                title = soup.find('span', class_='AggregateRatingButton__RatingScore-sc-1il8omz-1 fhMjqK');\n",
+    "                        #title = soup.find('h1',class_='TitleHeader__TitleText-sc-1wu6n3d-0 gxLYZW');\n",
+    "                out.append(title.text)\n",
+    "                time.sleep(0.5)\n",
+    "            else:\n",
+    "                out.append(i);\n",
+    "        return out\n",
+    "    except:\n",
+    "        return np.NaN\n",
+    "df['known_ratings'] = df['known_ratings'].apply(scrape_rate) \n",
+    "'''\n",
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df.to_csv('data/zippedData/Final_Data.csv.gz',compression = gzip);"
    ]
   },
   {
