Add Camerons notebook

--- a/Movies_Cameron.ipynb
+++ b/Movies_Cameron.ipynb
@@ -1414,7 +1414,7 @@
     "ax.tick_params(axis='x', labelrotation = 90)\n",
     "\n",
     "# add a legend \n",
-    "plt.legend(custom_lines, ['Sci-Fi', 'Comic-Book/Book', 'Family', 'Other'], fontsize=\"xx-large\") ###\n"
+    "plt.legend(custom_lines, ['Sci-Fi', 'Comic-Book/Book', 'Family', 'Other'], fontsize=\"xx-large\") "
    ]
   },
   {
