delete some things

--- a/Project_One_Final_Notebook.ipynb
+++ b/Project_One_Final_Notebook.ipynb
@@ -5060,6 +5060,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## New DataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
