--- a/project notebook.ipynb
+++ b/project notebook.ipynb
@@ -5422,7 +5422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Below is another few steps like before where I made each dataframe for the particular genres, but now I am using 1000 movies to help with the distribution of each gen"
+    "### Below is another few steps like before where I made each dataframe for the particular genres, but now I am using 1000 movies to help with the distribution of each genre in my next graph"
    ]
   },
   {
@@ -5473,7 +5473,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### These are the steps taken to formulate the distribution graph for each genre with 1000 total movies"
+   ]
   },
   {
    "cell_type": "code",
