--- a/Movies_Cameron.ipynb
+++ b/Movies_Cameron.ipynb
@@ -1371,7 +1371,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fef4d577d90>"
+       "<matplotlib.legend.Legend at 0x7f930bf75be0>"
       ]
      },
      "execution_count": 10,
@@ -1754,7 +1754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1782,7 +1782,7 @@
        " Text(19, 0, 'In the Company of Men')]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2301,260 +2301,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>release_date</th>\n",
-       "      <th>movie</th>\n",
-       "      <th>production_budget</th>\n",
-       "      <th>domestic_gross</th>\n",
-       "      <th>worldwide_gross</th>\n",
-       "      <th>profit</th>\n",
-       "      <th>return_rate</th>\n",
-       "      <th>day</th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>5772</th>\n",
-       "      <td>73</td>\n",
-       "      <td>Jan,13,2012</td>\n",
-       "      <td>Newlyweds</td>\n",
-       "      <td>9000</td>\n",
-       "      <td>4584</td>\n",
-       "      <td>4584</td>\n",
-       "      <td>-4416</td>\n",
-       "      <td>-0.490667</td>\n",
-       "      <td>13</td>\n",
-       "      <td>2012</td>\n",
-       "      <td>Jan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4146</th>\n",
-       "      <td>47</td>\n",
-       "      <td>Jan,15,2016</td>\n",
-       "      <td>The Lady in the Van</td>\n",
-       "      <td>6000000</td>\n",
-       "      <td>10021175</td>\n",
-       "      <td>42320503</td>\n",
-       "      <td>36320503</td>\n",
-       "      <td>6.053417</td>\n",
-       "      <td>15</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>Jan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1129</th>\n",
-       "      <td>30</td>\n",
-       "      <td>Jan,15,2016</td>\n",
-       "      <td>13 Hours: The Secret Soldiers of Benghazi</td>\n",
-       "      <td>50000000</td>\n",
-       "      <td>52853219</td>\n",
-       "      <td>69411370</td>\n",
-       "      <td>19411370</td>\n",
-       "      <td>0.388227</td>\n",
-       "      <td>15</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>Jan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4798</th>\n",
-       "      <td>99</td>\n",
-       "      <td>Jan,16,1998</td>\n",
-       "      <td>The Dress</td>\n",
-       "      <td>2650000</td>\n",
-       "      <td>16556</td>\n",
-       "      <td>16556</td>\n",
-       "      <td>-2633444</td>\n",
-       "      <td>-0.993752</td>\n",
-       "      <td>16</td>\n",
-       "      <td>1998</td>\n",
-       "      <td>Jan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>738</th>\n",
-       "      <td>39</td>\n",
-       "      <td>Jan,16,1998</td>\n",
-       "      <td>Hard Rain</td>\n",
-       "      <td>70000000</td>\n",
-       "      <td>19870567</td>\n",
-       "      <td>19870567</td>\n",
-       "      <td>-50129433</td>\n",
-       "      <td>-0.716135</td>\n",
-       "      <td>16</td>\n",
-       "      <td>1998</td>\n",
-       "      <td>Jan</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>576</th>\n",
-       "      <td>77</td>\n",
-       "      <td>Dec,31,1999</td>\n",
-       "      <td>Fantasia 2000 (Theatrical Release)</td>\n",
-       "      <td>80000000</td>\n",
-       "      <td>69610858</td>\n",
-       "      <td>69618634</td>\n",
-       "      <td>-10381366</td>\n",
-       "      <td>-0.129767</td>\n",
-       "      <td>31</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>Dec</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3332</th>\n",
-       "      <td>33</td>\n",
-       "      <td>Dec,31,1997</td>\n",
-       "      <td>Oscar and Lucinda</td>\n",
-       "      <td>12500000</td>\n",
-       "      <td>1612957</td>\n",
-       "      <td>1612957</td>\n",
-       "      <td>-10887043</td>\n",
-       "      <td>-0.870963</td>\n",
-       "      <td>31</td>\n",
-       "      <td>1997</td>\n",
-       "      <td>Dec</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3147</th>\n",
-       "      <td>48</td>\n",
-       "      <td>Dec,31,1996</td>\n",
-       "      <td>Silent Trigger</td>\n",
-       "      <td>15000000</td>\n",
-       "      <td>76382</td>\n",
-       "      <td>76382</td>\n",
-       "      <td>-14923618</td>\n",
-       "      <td>-0.994908</td>\n",
-       "      <td>31</td>\n",
-       "      <td>1996</td>\n",
-       "      <td>Dec</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5776</th>\n",
-       "      <td>77</td>\n",
-       "      <td>Dec,31,2004</td>\n",
-       "      <td>The Mongol King</td>\n",
-       "      <td>7000</td>\n",
-       "      <td>900</td>\n",
-       "      <td>900</td>\n",
-       "      <td>-6100</td>\n",
-       "      <td>-0.871429</td>\n",
-       "      <td>31</td>\n",
-       "      <td>2004</td>\n",
-       "      <td>Dec</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2334</th>\n",
-       "      <td>35</td>\n",
-       "      <td>Dec,20,2006</td>\n",
-       "      <td>Rocky Balboa</td>\n",
-       "      <td>24000000</td>\n",
-       "      <td>70269899</td>\n",
-       "      <td>156229050</td>\n",
-       "      <td>132229050</td>\n",
-       "      <td>5.509544</td>\n",
-       "      <td>20</td>\n",
-       "      <td>2006</td>\n",
-       "      <td>Dec</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5782 rows × 11 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      id release_date                                      movie  \\\n",
-       "5772  73  Jan,13,2012                                  Newlyweds   \n",
-       "4146  47  Jan,15,2016                        The Lady in the Van   \n",
-       "1129  30  Jan,15,2016  13 Hours: The Secret Soldiers of Benghazi   \n",
-       "4798  99  Jan,16,1998                                  The Dress   \n",
-       "738   39  Jan,16,1998                                  Hard Rain   \n",
-       "...   ..          ...                                        ...   \n",
-       "576   77  Dec,31,1999         Fantasia 2000 (Theatrical Release)   \n",
-       "3332  33  Dec,31,1997                          Oscar and Lucinda   \n",
-       "3147  48  Dec,31,1996                             Silent Trigger   \n",
-       "5776  77  Dec,31,2004                            The Mongol King   \n",
-       "2334  35  Dec,20,2006                               Rocky Balboa   \n",
-       "\n",
-       "      production_budget  domestic_gross  worldwide_gross     profit  \\\n",
-       "5772               9000            4584             4584      -4416   \n",
-       "4146            6000000        10021175         42320503   36320503   \n",
-       "1129           50000000        52853219         69411370   19411370   \n",
-       "4798            2650000           16556            16556   -2633444   \n",
-       "738            70000000        19870567         19870567  -50129433   \n",
-       "...                 ...             ...              ...        ...   \n",
-       "576            80000000        69610858         69618634  -10381366   \n",
-       "3332           12500000         1612957          1612957  -10887043   \n",
-       "3147           15000000           76382            76382  -14923618   \n",
-       "5776               7000             900              900      -6100   \n",
-       "2334           24000000        70269899        156229050  132229050   \n",
-       "\n",
-       "      return_rate day  year month  \n",
-       "5772    -0.490667  13  2012   Jan  \n",
-       "4146     6.053417  15  2016   Jan  \n",
-       "1129     0.388227  15  2016   Jan  \n",
-       "4798    -0.993752  16  1998   Jan  \n",
-       "738     -0.716135  16  1998   Jan  \n",
-       "...           ...  ..   ...   ...  \n",
-       "576     -0.129767  31  1999   Dec  \n",
-       "3332    -0.870963  31  1997   Dec  \n",
-       "3147    -0.994908  31  1996   Dec  \n",
-       "5776    -0.871429  31  2004   Dec  \n",
-       "2334     5.509544  20  2006   Dec  \n",
-       "\n",
-       "[5782 rows x 11 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\n",
-    "dict_release_date = {i:e for e,i in enumerate(calendar.month_abbr)} #creates a dictionary\n",
-    "\n",
-    "df_release_date.reindex(df_release_date.month.map(dict_release_date).sort_values().index) #map + sort_values + reindex with index"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2563,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -2777,7 +2523,7 @@
        "Sep     430.517853  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2789,7 +2535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3003,7 +2749,7 @@
        "Dec     123.277880  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3017,7 +2763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -3060,7 +2806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -3274,7 +3020,7 @@
        "Sep    3.100830e+07  6.624580e+08  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3286,7 +3032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3500,7 +3246,7 @@
        "Dec    7.501533e+07  2.351345e+09  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3514,7 +3260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
